--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         
                         <h2 style="color: rgb(72, 248, 148)">Welcome to YWY - Year With Yernur</h2>
                         <p>Hey there! So next year I will post every success<br>to my blog and you can Also.I'm willing to develop<br>my brand in many aspects. Clothing, food,<br>IT startup, Venture fund and GreenHouse which is<br>my dream brand!</p>
-                        <mark style="color: white;">I don't know how to name my brand. Help me out 👇🏼 and help</mark>
+                        <mark style="color: white;">I don't know how to name my brand. Help me out 👇🏼 and helpgit status</mark>
                         <h2 style="margin-top: 2rem;"><a href="https://forms.gle/12QJViBZPu7wHig48" style="color: rgb(0, 76, 255); background-color: rgb(81, 81, 81); border-radius: 8%; padding: 0.3rem">Vote There</a></h2>
                     </div>
                     <div class="about-left">
